added linked in

--- a/index.html
+++ b/index.html
@@ -475,8 +475,11 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
       <footer>
         <ul class="icons">
           <li>
-            <a href="#" class="icon brands alt fa-twitter"
-              ><span class="label">Twitter</span></a
+            <a
+              href="www.linkedin.com/in/iandkaneshiro"
+              target="_blank"
+              class="icon brands alt fa-linkedin"
+              ><span class="label">LinkedIn</span></a
             >
           </li>
           <li>
