--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
   <head>
-    <title>Highlights by HTML5 UP</title>
+    <title>Ian Kaneshiro</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -19,11 +19,13 @@
     <section id="header">
       <header class="major">
         <h1>Ian Kaneshiro</h1>
-        <p>Portfolio Site</p>
+        <p>Full-Stack Software Engineer</p>
       </header>
       <div class="container">
         <ul class="actions special">
-          <li><a href="#one" class="button primary scrolly">Begin</a></li>
+          <li>
+            <a href="#one" class="button primary scrolly">Get To Know Me</a>
+          </li>
         </ul>
       </div>
     </section>
@@ -45,18 +47,14 @@
             Redux, and Python and I'm actively working on expanding beyond my
             current knowledge base. One of my favorite parts of being a software
             engineer is no longer having to say “I wish there was an app for
-            that”. I can just create one! My background includes 8+ years in
-            retail operations. I have been a part of, led, and managed many high
-            performing teams. I am no stranger to fast-paced work environments,
-            with high performance expectations. In fact I believe that is where
-            I really thrive. Doing your very best at everything you commit to is
-            a value of mine that I work to apply in all aspects of my life.
+            that”. I can just create one!
+            <br />
             Learning is a lifelong journey for me and I'm just getting started!
             I'm excited to continue to build applications and experiment with
             new technologies and languages.
           </p>
         </div>
-        <a href="#two" class="goto-next scrolly">Next</a>
+        <a href="#two" class="goto-next scrolly">My Work</a>
       </div>
     </section>
 
@@ -68,15 +66,17 @@
         /></span>
         <div class="content">
           <header class="major">
-            <h2>Stuff I do</h2>
+            <h2>Projects</h2>
           </header>
-          <p>
-            Consequat sed ultricies rutrum. Sed adipiscing eu amet interdum
-            lorem blandit vis ac commodo aliquet vulputate.
-          </p>
+          <p>Check out some of my recent projects</p>
           <ul class="icons-grid">
             <li>
-              <span class="icon solid major fa-camera-retro"></span>
+              <a href="https://kandiscer.onrender.com/" target="_blank">
+                <img
+                  src="https://res.cloudinary.com/dmkyocbqi/image/upload/v1698716916/Screenshot_2023-10-30_184821_dczkkx.png"
+                  alt="Kandiscer website homepage"
+                />
+              </a>
               <h3>Magna Etiam</h3>
             </li>
             <li>
