--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
               </div>
               <img
                 class="img-fluid"
-                src="assets/img/portfolio/cabin.png"
+                src="assets/img/gifs/kandiscer.gif"
                 alt="..."
               />
             </div>
