--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
                   <h2
                     class="portfolio-modal-title text-secondary text-uppercase mb-0"
                   >
-                    Log Cabin
+                    KanDiscer
                   </h2>
                   <!-- Icon Divider-->
                   <div class="divider-custom">
@@ -488,18 +488,16 @@
                     <div class="divider-custom-line"></div>
                   </div>
                   <!-- Portfolio Modal - Image-->
-                  <img
-                    class="img-fluid rounded mb-5"
-                    src="assets/img/portfolio/cabin.png"
-                    alt="..."
-                  />
+                  <a href="https://kandiscer.onrender.com/" target="_blank">
+                    <img
+                      class="img-fluid rounded mb-5"
+                      src="assets/img/gifs/kandiscer.gif"
+                      alt="..."
+                    />
+                  </a>
                   <!-- Portfolio Modal - Text-->
                   <p class="mb-4">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    Mollitia neque assumenda ipsam nihil, molestias magnam,
-                    recusandae quos quis inventore quisquam velit asperiores,
-                    vitae? Reprehenderit soluta, eos quod consequuntur itaque.
-                    Nam.
+                   KanDiscer is a web app built to help disc golfers improve their game!
                   </p>
                   <button class="btn btn-primary" data-bs-dismiss="modal">
                     <i class="fas fa-xmark fa-fw"></i>
