added portfolia apps

--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
                   <i class="fas fa-plus fa-3x"></i>
                 </div>
               </div>
+              <h6>KanDiscer</h6>
               <img
                 class="img-fluid"
                 src="assets/img/gifs/kandiscer.gif"
@@ -150,9 +151,10 @@
                   <i class="fas fa-plus fa-3x"></i>
                 </div>
               </div>
+              <h6>Jeanak Eats</h6>
               <img
                 class="img-fluid"
-                src="assets/img/portfolio/cake.png"
+                src="assets/img/gifs/jeanakeats.gif"
                 alt="..."
               />
             </div>
@@ -173,78 +175,10 @@
                   <i class="fas fa-plus fa-3x"></i>
                 </div>
               </div>
+              <h6>KanAirBnB</h6>
               <img
                 class="img-fluid"
-                src="assets/img/portfolio/circus.png"
-                alt="..."
-              />
-            </div>
-          </div>
-          <!-- Portfolio Item 4-->
-          <div class="col-md-6 col-lg-4 mb-5 mb-lg-0">
-            <div
-              class="portfolio-item mx-auto"
-              data-bs-toggle="modal"
-              data-bs-target="#portfolioModal4"
-            >
-              <div
-                class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100"
-              >
-                <div
-                  class="portfolio-item-caption-content text-center text-white"
-                >
-                  <i class="fas fa-plus fa-3x"></i>
-                </div>
-              </div>
-              <img
-                class="img-fluid"
-                src="assets/img/portfolio/game.png"
-                alt="..."
-              />
-            </div>
-          </div>
-          <!-- Portfolio Item 5-->
-          <div class="col-md-6 col-lg-4 mb-5 mb-md-0">
-            <div
-              class="portfolio-item mx-auto"
-              data-bs-toggle="modal"
-              data-bs-target="#portfolioModal5"
-            >
-              <div
-                class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100"
-              >
-                <div
-                  class="portfolio-item-caption-content text-center text-white"
-                >
-                  <i class="fas fa-plus fa-3x"></i>
-                </div>
-              </div>
-              <img
-                class="img-fluid"
-                src="assets/img/portfolio/safe.png"
-                alt="..."
-              />
-            </div>
-          </div>
-          <!-- Portfolio Item 6-->
-          <div class="col-md-6 col-lg-4">
-            <div
-              class="portfolio-item mx-auto"
-              data-bs-toggle="modal"
-              data-bs-target="#portfolioModal6"
-            >
-              <div
-                class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100"
-              >
-                <div
-                  class="portfolio-item-caption-content text-center text-white"
-                >
-                  <i class="fas fa-plus fa-3x"></i>
-                </div>
-              </div>
-              <img
-                class="img-fluid"
-                src="assets/img/portfolio/submarine.png"
+                src="assets/img/gifs/kanairbnb.gif"
                 alt="..."
               />
             </div>
@@ -536,7 +470,7 @@
                   <h2
                     class="portfolio-modal-title text-secondary text-uppercase mb-0"
                   >
-                    Tasty Cake
+                    Jeanak Eats
                   </h2>
                   <!-- Icon Divider-->
                   <div class="divider-custom">
@@ -547,18 +481,16 @@
                     <div class="divider-custom-line"></div>
                   </div>
                   <!-- Portfolio Modal - Image-->
-                  <img
-                    class="img-fluid rounded mb-5"
-                    src="assets/img/portfolio/cake.png"
-                    alt="..."
-                  />
+                  <a href="https://jeanak-eats.onrender.com/" target="_blank">
+                    <img
+                      class="img-fluid rounded mb-5"
+                      src="assets/img/gifs/jeanakeats.gif"
+                      alt="..."
+                    />
+                  </a>
                   <!-- Portfolio Modal - Text-->
                   <p class="mb-4">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    Mollitia neque assumenda ipsam nihil, molestias magnam,
-                    recusandae quos quis inventore quisquam velit asperiores,
-                    vitae? Reprehenderit soluta, eos quod consequuntur itaque.
-                    Nam.
+                   Jeanak Eats is based off the popular web app Uber Eats.
                   </p>
                   <button class="btn btn-primary" data-bs-dismiss="modal">
                     <i class="fas fa-xmark fa-fw"></i>
@@ -597,7 +529,7 @@
                   <h2
                     class="portfolio-modal-title text-secondary text-uppercase mb-0"
                   >
-                    Circus Tent
+                    KanAirBnB
                   </h2>
                   <!-- Icon Divider-->
                   <div class="divider-custom">
@@ -608,18 +540,16 @@
                     <div class="divider-custom-line"></div>
                   </div>
                   <!-- Portfolio Modal - Image-->
-                  <img
-                    class="img-fluid rounded mb-5"
-                    src="assets/img/portfolio/circus.png"
-                    alt="..."
-                  />
+                  <a href="https://ians-kanairbnb.onrender.com/" target="_blank">
+                    <img
+                      class="img-fluid rounded mb-5"
+                      src="assets/img/gifs/kanairbnb.gif"
+                      alt="..."
+                    />
+                  </a>
                   <!-- Portfolio Modal - Text-->
                   <p class="mb-4">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    Mollitia neque assumenda ipsam nihil, molestias magnam,
-                    recusandae quos quis inventore quisquam velit asperiores,
-                    vitae? Reprehenderit soluta, eos quod consequuntur itaque.
-                    Nam.
+                      KanAirBnB is a clone of AirBnB.
                   </p>
                   <button class="btn btn-primary" data-bs-dismiss="modal">
                     <i class="fas fa-xmark fa-fw"></i>
