updating portfolio site

--- a/index.html
+++ b/index.html
@@ -75,19 +75,19 @@
     <header class="masthead bg-primary text-white text-center">
       <div class="container d-flex align-items-center flex-column">
         <!-- Masthead Avatar Image-->
-        <img
+        <!-- <img
           class="masthead-avatar mb-5"
           src="assets/img/avataaars.svg"
           alt="..."
-        />
+        /> -->
         <!-- Masthead Heading-->
-        <h1 class="masthead-heading text-uppercase mb-0">Ian Kaneshiro</h1>
+        <h1 class="masthead-heading text-uppercase mb-10">Ian Kaneshiro</h1>
         <!-- Icon Divider-->
-        <div class="divider-custom divider-light">
+        <!-- <div class="divider-custom divider-light">
           <div class="divider-custom-line"></div>
           <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
           <div class="divider-custom-line"></div>
-        </div>
+        </div> -->
         <!-- Masthead Subheading-->
         <p class="masthead-subheading font-weight-light mb-0">
           Full-Stack Software Engineer
@@ -106,7 +106,7 @@
         <!-- Icon Divider-->
         <div class="divider-custom">
           <div class="divider-custom-line"></div>
-          <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+          <div class="divider-custom-icon"><i class="fa-solid fa-code"></i></i></div>
           <div class="divider-custom-line"></div>
         </div>
         <!-- Portfolio Grid Items-->
@@ -196,7 +196,7 @@
         <!-- Icon Divider-->
         <div class="divider-custom divider-light">
           <div class="divider-custom-line"></div>
-          <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+          <div class="divider-custom-icon"><i class="fa-solid fa-circle-user"></i></div>
           <div class="divider-custom-line"></div>
         </div>
         <!-- About Section Content-->
@@ -242,7 +242,7 @@
         <!-- Icon Divider-->
         <div class="divider-custom">
           <div class="divider-custom-line"></div>
-          <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+          <div class="divider-custom-icon"><i class="fa-solid fa-address-book"></i></i></div>
           <div class="divider-custom-line"></div>
         </div>
         <!-- Contact Section Form-->
@@ -255,7 +255,7 @@
             <!-- To make this form functional, sign up at-->
             <!-- https://startbootstrap.com/solution/contact-forms-->
             <!-- to get an API token!-->
-            <form id="contactForm" data-sb-form-api-token="API_TOKEN">
+            <form id="contactForm" data-sb-form-api-token="e569325f-b580-43c3-af61-5b3a5506485a">
               <!-- Name input-->
               <div class="form-floating mb-3">
                 <input
@@ -326,11 +326,6 @@
               <div class="d-none" id="submitSuccessMessage">
                 <div class="text-center mb-3">
                   <div class="fw-bolder">Form submission successful!</div>
-                  To activate this form, sign up at
-                  <br />
-                  <a href="https://startbootstrap.com/solution/contact-forms"
-                    >https://startbootstrap.com/solution/contact-forms</a
-                  >
                 </div>
               </div>
               <!-- Submit error message-->
@@ -358,22 +353,15 @@
     <!-- Footer-->
     <footer class="footer text-center">
       <div class="container">
-        <div class="row">
+        <div class="row justify-content-center">
           <!-- Footer Social Icons-->
-          <div class="col-lg-4">
+          <div class="col-lg-4 ">
             <h4 class="text-uppercase mb-4">Around the Web</h4>
-            <a class="btn btn-outline-light btn-social mx-1" href="#!"
-              ><i class="fab fa-fw fa-facebook-f"></i
-            ></a>
-            <a class="btn btn-outline-light btn-social mx-1" href="#!"
-              ><i class="fab fa-fw fa-twitter"></i
-            ></a>
-            <a class="btn btn-outline-light btn-social mx-1" href="#!"
+            <a class="btn btn-outline-light btn-social mx-1" href="http://www.linkedin.com/in/iandkaneshiro" target="_blank"
               ><i class="fab fa-fw fa-linkedin-in"></i
             ></a>
-            <a class="btn btn-outline-light btn-social mx-1" href="#!"
-              ><i class="fab fa-fw fa-dribbble"></i
-            ></a>
+            <a class="btn btn-outline-light btn-social mx-1" href="https://github.com/IanKaneshiro" target="_blank"
+            ><i class="fa-brands fa-github"></i></a>
           </div>
           <!-- Footer About Text-->
       </div>
@@ -417,7 +405,7 @@
                   <div class="divider-custom">
                     <div class="divider-custom-line"></div>
                     <div class="divider-custom-icon">
-                      <i class="fas fa-star"></i>
+                      <i class="fa-solid fa-code"></i>
                     </div>
                     <div class="divider-custom-line"></div>
                   </div>
@@ -476,7 +464,7 @@
                   <div class="divider-custom">
                     <div class="divider-custom-line"></div>
                     <div class="divider-custom-icon">
-                      <i class="fas fa-star"></i>
+                      <i class="fa-solid fa-code"></i>
                     </div>
                     <div class="divider-custom-line"></div>
                   </div>
@@ -535,7 +523,7 @@
                   <div class="divider-custom">
                     <div class="divider-custom-line"></div>
                     <div class="divider-custom-icon">
-                      <i class="fas fa-star"></i>
+                      <i class="fa-solid fa-code"></i>
                     </div>
                     <div class="divider-custom-line"></div>
                   </div>
