added new form method

--- a/index.html
+++ b/index.html
@@ -246,109 +246,39 @@
           <div class="divider-custom-line"></div>
         </div>
         <!-- Contact Section Form-->
-        <div class="row justify-content-center">
-          <div class="col-lg-8 col-xl-7">
-            <!-- * * * * * * * * * * * * * * *-->
-            <!-- * * SB Forms Contact Form * *-->
-            <!-- * * * * * * * * * * * * * * *-->
-            <!-- This form is pre-integrated with SB Forms.-->
-            <!-- To make this form functional, sign up at-->
-            <!-- https://startbootstrap.com/solution/contact-forms-->
-            <!-- to get an API token!-->
-            <form id="contactForm" data-sb-form-api-token="e569325f-b580-43c3-af61-5b3a5506485a">
-              <!-- Name input-->
-              <div class="form-floating mb-3">
-                <input
-                  class="form-control"
-                  id="name"
-                  type="text"
-                  placeholder="Enter your name..."
-                  data-sb-validations="required"
-                />
-                <label for="name">Full name</label>
-                <div class="invalid-feedback" data-sb-feedback="name:required">
-                  A name is required.
-                </div>
+        <div class="container">
+          <div class="row justify-content-center align-items-center">
+              <div class="col-lg-8 col-xl-7">
+                  <form method="post" action="https://formsubmit.io/send/iandkaneshiro@gmail.com" class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
+                    <input name="_redirect" type="hidden" id="name" value="https://www.iankaneshiro.dev/">
+                      <div class="mb-4">
+                          <label class="block text-gray-700 text-sm font-bold mb-2" for="name">
+                              Name
+                          </label>
+                          <input class="shadow form-control appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="name" type="text" placeholder="Name" name="name" required>
+                      </div>
+                      <div class="mb-4">
+                          <label class="block text-gray-700 text-sm font-bold mb-2" for="email">
+                              Email
+                          </label>
+                          <input class="shadow form-control appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="email" type="email" placeholder="Email" name="email" required>
+                      </div>
+                      <div class="mb-6">
+                          <label class="block text-gray-700 text-sm font-bold mb-2" for="message">
+                              Message
+                          </label>
+                          <textarea class="shadow form-control appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="message" placeholder="Message" name="message" rows="4"></textarea>
+                      </div>
+                      <input name="_formsubmit_id" type="text" style="display:none">
+                      <button type="submit" class="btn btn-primary mt-2">
+                          Send
+                      </button>
+                  </form>
               </div>
-              <!-- Email address input-->
-              <div class="form-floating mb-3">
-                <input
-                  class="form-control"
-                  id="email"
-                  type="email"
-                  placeholder="name@example.com"
-                  data-sb-validations="required,email"
-                />
-                <label for="email">Email address</label>
-                <div class="invalid-feedback" data-sb-feedback="email:required">
-                  An email is required.
-                </div>
-                <div class="invalid-feedback" data-sb-feedback="email:email">
-                  Email is not valid.
-                </div>
-              </div>
-              <!-- Phone number input-->
-              <div class="form-floating mb-3">
-                <input
-                  class="form-control"
-                  id="phone"
-                  type="tel"
-                  placeholder="(123) 456-7890"
-                  data-sb-validations="required"
-                />
-                <label for="phone">Phone number</label>
-                <div class="invalid-feedback" data-sb-feedback="phone:required">
-                  A phone number is required.
-                </div>
-              </div>
-              <!-- Message input-->
-              <div class="form-floating mb-3">
-                <textarea
-                  class="form-control"
-                  id="message"
-                  type="text"
-                  placeholder="Enter your message here..."
-                  style="height: 10rem"
-                  data-sb-validations="required"
-                ></textarea>
-                <label for="message">Message</label>
-                <div
-                  class="invalid-feedback"
-                  data-sb-feedback="message:required"
-                >
-                  A message is required.
-                </div>
-              </div>
-              <!-- Submit success message-->
-              <!---->
-              <!-- This is what your users will see when the form-->
-              <!-- has successfully submitted-->
-              <div class="d-none" id="submitSuccessMessage">
-                <div class="text-center mb-3">
-                  <div class="fw-bolder">Form submission successful!</div>
-                </div>
-              </div>
-              <!-- Submit error message-->
-              <!---->
-              <!-- This is what your users will see when there is-->
-              <!-- an error submitting the form-->
-              <div class="d-none" id="submitErrorMessage">
-                <div class="text-center text-danger mb-3">
-                  Error sending message!
-                </div>
-              </div>
-              <!-- Submit Button-->
-              <button
-                class="btn btn-primary btn-xl disabled"
-                id="submitButton"
-                type="submit"
-              >
-                Send
-              </button>
-            </form>
           </div>
-        </div>
       </div>
+
+
     </section>
     <!-- Footer-->
     <footer class="footer text-center">
