--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
           Full-Stack Software Engineer
         </p>
       </div>
+      <img src="assets/iankaneshiro.jpg"  style="width: 400px; margin-top: 20px;" alt="ian kaneshiros portrait photo"/>
     </header>
     <!-- Portfolio Section-->
     <section class="page-section portfolio" id="portfolio">
