--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item mx-0 mx-lg-1">
-              <a class="nav-link py-3 px-0 px-lg-3 rounded" href="#portfolio"
-                >Portfolio</a
+              <a class="nav-link py-3 px-0 px-lg-3 rounded" href="#about"
+              >About</a
               >
             </li>
             <li class="nav-item mx-0 mx-lg-1">
-              <a class="nav-link py-3 px-0 px-lg-3 rounded" href="#about"
-                >About</a
+              <a class="nav-link py-3 px-0 px-lg-3 rounded" href="#portfolio"
+                >Portfolio</a
               >
             </li>
             <li class="nav-item mx-0 mx-lg-1">
@@ -204,7 +204,7 @@
               />
             </div>
           </div>
-          <!-- Portfolio Item 3-->
+          <!-- Portfolio Item 3
           <div class="col-md-6 col-lg-4 mb-5">
             <div
               class="portfolio-item mx-auto"
@@ -227,7 +227,7 @@
                 alt="..."
               />
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </section>
@@ -288,7 +288,7 @@
         <div class="row justify-content-center">
           <!-- Footer Social Icons-->
           <div class="col-lg-4 ">
-            <h4 class="text-uppercase mb-4">Around the Web</h4>
+            <h4 class="text-uppercase mb-4">Connect with me</h4>
             <a class="btn btn-outline-light btn-social mx-1" href="http://www.linkedin.com/in/iandkaneshiro" target="_blank"
               ><i class="fab fa-fw fa-linkedin-in"></i
             ></a>
@@ -353,7 +353,7 @@
                   <h4 class="mb-4">
                    KanDiscer is a web app built to help disc golfers improve their game!
                   </h4>
-                 <ul >
+                 <ul>
                   <li class="mb-1">Incorporated MapBox’s Javascript library to allow users to preview layouts of courses, as well as navigate courses using live GPS positioning, enhancing the overall user experience (UX).
                   </li>
                   <li class="mb-1">Utilized Recharts library to generate a visual representation of the flight path of each disc, empowering users to pinpoint areas for improvement in their bag design.
@@ -419,9 +419,16 @@
                     />
                   </a>
                   <!-- Portfolio Modal - Text-->
-                  <p class="mb-4">
+                  <h4 class="mb-4">
                    Jeanak Eats is based off the popular web app Uber Eats.
-                  </p>
+                  </h4>
+                  <ul>
+                    <li>Leveraged AWS S3 for the direct upload and retrieval of images, enhancing user experience and ensuring future scalability.</li>
+                    <li>Designed and implemented a Flask and SQLAlchemy based RESTful API for efficient JSON data exchange.
+                    </li>
+                    <li>Engineered a real-time store availability algorithm, dynamically calculating store hours vs the current time.</li>
+                    <li>Implemented a feature branch Git workflow to foster effective team collaboration and mitigate merge conflicts, ensuring efficient and on-time project completion.</li>
+                  </ul>
                   <button class="btn btn-primary" data-bs-dismiss="modal">
                     <i class="fas fa-xmark fa-fw"></i>
                     Close Window
