--- a/index.html
+++ b/index.html
@@ -353,6 +353,7 @@
                   <h4 class="mb-4">
                    KanDiscer is a web app built to help disc golfers improve their game!
                   </h4>
+                  <p><a href="https://kandiscer.onrender.com/" target="_blank">Live</a> | <a href="https://github.com/IanKaneshiro/KanDiscer" target="_blank">Github Repo</a></p>
                  <ul>
                   <li class="mb-1">Incorporated MapBox’s Javascript library to allow users to preview layouts of courses, as well as navigate courses using live GPS positioning, enhancing the overall user experience (UX).
                   </li>
@@ -422,6 +423,7 @@
                   <h4 class="mb-4">
                    Jeanak Eats is based off the popular web app Uber Eats.
                   </h4>
+                  <p><a href="https://jeanak-eats.onrender.com/">Live</a> | <a href="https://github.com/IanKaneshiro/Jeanak-Eats">Github Repo</a></p>
                   <ul>
                     <li>Leveraged AWS S3 for the direct upload and retrieval of images, enhancing user experience and ensuring future scalability.</li>
                     <li>Designed and implemented a Flask and SQLAlchemy based RESTful API for efficient JSON data exchange.
